src/assets/css/main.css
/* Force footer icons to always display */

footer ul.icons,
footer ul.icons li,
footer ul.icons li a {
    display: inline-block !important;
    visibility: visible !important;
    opacity: 1 !important;
}

@media screen and (max-width: 768px) {
    ul.actions,
    ul.actions.special,
    .scrolly,
    .goto-next,
    ul.icons,
    ul.icons li {
        display: block !important;
        visibility: visible !important;
        opacity: 1 !important;
        z-index: 1000;
    }
    ul.icons li {
        display: inline-block !important;
        padding: 0 1em 0 0;
    }
}


/* Hide webp images in section spans */

.section-bg img[src$='.webp'] {
    display: none !important;
}


/* Section backgrounds for mobile fix */

.section-bg-one {
    background-image: url("../images/photo1.webp");
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}

.section-bg-two {
    background-image: url("../images/photo2.webp");
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}

.section-bg-three {
    background-image: url("../images/photo3.webp");
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}

@media (max-width: 768px) {
    .section-bg img {
        display: none;
    }
    .section-bg {
        min-height: 200px;
        width: 100%;
        display: block;
    }
}

@import url("fontawesome-all.min.css");
@import url("https://fonts.googleapis.com/css?family=Raleway:400,400italic,700,800");
html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}

article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
    display: block;
}

body {
    line-height: 1;
}

ol,
ul {
    list-style: none;
}

blockquote,
q {
    quotes: none;
}

blockquote:before,
blockquote:after,
q:before,
q:after {
    content: '';
    content: none;
}

table {
    border-collapse: collapse;
    border-spacing: 0;
}

body {
    -webkit-text-size-adjust: none;
}

mark {
    background-color: transparent;
    color: inherit;
}

input::-moz-focus-inner {
    border: 0;
    padding: 0;
}

input,
select,
textarea {
    -moz-appearance: none;
    -webkit-appearance: none;
    -ms-appearance: none;
    appearance: none;
}


/* Basic */

html {
    box-sizing: border-box;
}

*,
*:before,
*:after {
    box-sizing: inherit;
}

html {
    background-color: #313a3d;
    background-attachment: fixed, fixed;
    background-image: url("images/overlay.png"), url("../../images/bg.jpg");
    background-position: top left, center center;
    background-repeat: repeat, none;
    background-size: auto, cover;
}

html.is-preload *,
html.is-preload *:before,
html.is-preload *:after {
    -moz-animation: none !important;
    -webkit-animation: none !important;
    -ms-animation: none !important;
    animation: none !important;
    -moz-transition: none !important;
    -webkit-transition: none !important;
    -ms-transition: none !important;
    transition: none !important;
}

html.is-touch {
    height: 100vh;
    overflow: hidden;
}

html.is-touch #wrapper {
    -webkit-backface-visibility: hidden;
    -webkit-overflow-scrolling: touch;
    -webkit-transform: translate3d(0, 0, 0);
    height: 100vh;
    overflow: auto;
}

body,
input,
select,
textarea {
    color: #6f7577;
    font-family: "Raleway", "Helvetica", sans-serif;
    font-size: 15pt;
    font-weight: 400;
    line-height: 1.75em;
}

a {
    -moz-transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
    -webkit-transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
    -ms-transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
    transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
    border-bottom: dotted 1px;
    color: #8cd1a8;
    text-decoration: none;
}

a:hover {
    border-bottom-color: transparent !important;
    color: #8cd1a8 !important;
    text-decoration: none;
}

strong,
b {
    color: #61686b;
    font-weight: 700;
}

em,
i {
    font-style: italic;
}

p {
    margin: 0 0 2em 0;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    color: #61686b;
    font-weight: 800;
    letter-spacing: 0.075em;
    line-height: 1em;
    margin: 0 0 1em 0;
    text-transform: uppercase;
}

h1 a,
h2 a,
h3 a,
h4 a,
h5 a,
h6 a {
    color: inherit;
    text-decoration: none;
}

h2 {
    font-size: 1.75em;
    line-height: 1.5em;
}

h3 {
    font-size: 1em;
    line-height: 1.5em;
}

h4 {
    font-size: 0.9em;
    line-height: 1.5em;
}

h5 {
    font-size: 0.8em;
    line-height: 1.5em;
}

h6 {
    font-size: 0.7em;
    line-height: 1.5em;
}

sub {
    font-size: 0.8em;
    position: relative;
    top: 0.5em;
}

sup {
    font-size: 0.8em;
    position: relative;
    top: -0.5em;
}

hr {
    border: 0;
    border-bottom: solid 1px #dddddd;
    margin: 2em 0;
}

hr.major {
    margin: 3em 0;
}

blockquote {
    border-left: solid 6px #dddddd;
    font-style: italic;
    margin: 0 0 2em 0;
    padding: 0.5em 0 0.5em 1.5em;
}

code {
    background: rgba(144, 144, 144, 0.075);
    font-family: "Courier New", monospace;
    font-size: 0.9em;
    margin: 0 0.25em;
    padding: 0.25em 0.65em;
}

pre {
    -webkit-overflow-scrolling: touch;
    font-family: "Courier New", monospace;
    font-size: 0.9em;
    margin: 0 0 2em 0;
}

pre code {
    display: block;
    line-height: 1.75em;
    padding: 1em 1.5em;
    overflow-x: auto;
}
/* ... */

